--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/node,webstorm
-# Edit at https://www.toptal.com/developers/gitignore?templates=node,webstorm
+# Created by https://www.toptal.com/developers/gitignore/api/node,phpstorm
+# Edit at https://www.toptal.com/developers/gitignore?templates=node,phpstorm
 
 ### Node ###
 # Logs
@@ -113,7 +113,7 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-### WebStorm ###
+### PhpStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -186,7 +186,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-### WebStorm Patch ###
+### PhpStorm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
 # *.iml
@@ -216,4 +216,4 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
-# End of https://www.toptal.com/developers/gitignore/api/node,webstorm
+# End of https://www.toptal.com/developers/gitignore/api/node,phpstorm
